--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
     <p>Elements are the foundation of the system. Simply using typography and color, well designed Elements can begin to express the site's personality.</p>
     <ul class="posts">
       {% for post in site.categories.elements %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
       {% endfor %}
     </ul>
   </section>
@@ -20,7 +20,7 @@ title: Home
     <p>Elements are combined and sometimes modified to create components. Components are designed to serve specific functional roles within the system.</p>
     <ul class="posts">
       {% for post in site.categories.components order:descending %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
       {% endfor %}
     </ul>
   </section>
@@ -31,7 +31,7 @@ title: Home
     <p>Templates are the specific page structures. They are as you might imagine, populated with... Components.<p>
     <ul class="posts">
       {% for post in site.categories.templates %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
       {% endfor %}
     </ul>
   </section>
