Refined index.html, added "styleguide" folder to assets/sass. Added logo to site-header.

--- a/_posts/2014-01-01-dotw-list.html
+++ b/_posts/2014-01-01-dotw-list.html
@@ -1,5 +1,8 @@
 ---
 layout: post
 title: "Day of the Week list"
+description: Used on bar pages to display the food and drink specials for each day of the week.
 categories: components
 ---
+
+{{% include dotw-list.html %}}
