added Rollup and Finder Component markup and styles.

--- a/_posts/2014-01-01-listing-rollup.html
+++ b/_posts/2014-01-01-listing-rollup.html
@@ -1,5 +1,34 @@
 ---
 layout: post
 title: "Listing Rollup"
+description: Listing rollups are a "results" microformat that display a Bar's daily special.  
 categories: components
 ---
+
+<div class="container">
+
+  <div class="l-3up--1">
+    {% include rollup--a.html %}
+  </div>
+
+  <div class="l-3up--2">
+    {% include rollup--a.html %}
+  </div>
+
+  <div class="l-3up--3">
+    {% include rollup--a.html %}
+  </div>  
+
+  <div class="l-3up--1">
+    {% include rollup--a.html %}
+  </div>
+
+  <div class="l-3up--2">
+    {% include rollup--a.html %}
+  </div>
+
+  <div class="l-3up--3">
+    {% include rollup--a.html %}
+  </div> 
+
+</div>
