Refactored component page layout.

--- a/_posts/2014-01-01-listing-rollup.html
+++ b/_posts/2014-01-01-listing-rollup.html
@@ -1,34 +1,12 @@
 ---
 layout: post
 title: "Listing Rollup"
-description: Listing rollups are a "results" microformat that display a Bar's daily special.  
+description: Listing rollups are a results microformat that display a bar's daily special. Their role is to quickly communicate the bar's location, specials and bar type in an easily scannable manner.  
 categories: components
 ---
 
 <div class="container">
-
-  <div class="l-3up--1">
-    {% include rollup--a.html %}
-  </div>
-
   <div class="l-3up--2">
     {% include rollup--a.html %}
   </div>
-
-  <div class="l-3up--3">
-    {% include rollup--a.html %}
-  </div>  
-
-  <div class="l-3up--1">
-    {% include rollup--a.html %}
-  </div>
-
-  <div class="l-3up--2">
-    {% include rollup--a.html %}
-  </div>
-
-  <div class="l-3up--3">
-    {% include rollup--a.html %}
-  </div> 
-
 </div>
