--- a/_posts/2014-01-01-site-header.html
+++ b/_posts/2014-01-01-site-header.html
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: "Site Header"
+description: Some text about the site header and primary navigation.
 categories: components
 ---
 
-
+{% include site-header.html %}
