--- a/_posts/2014-01-01-finder.html
+++ b/_posts/2014-01-01-finder.html
@@ -5,79 +5,8 @@ description: The specials finder is the main user interface for finding specials
 categories: components
 ---
 
-<div class="container">
+<div class="container finder">
   <div class="l-1up">
-
-    <h1 class="finder__heading">Find specials near or far:</h1>
-
-    <p>
-      <label class="finder__label" for="select">Browse</label>
-      <select id="finder__dotw">
-        <option>Monday</option>
-        <option>Tuesday</option>
-        <option>Wednesday</option>
-        <option>Thursday</option>
-        <option>Friday</option>
-        <option>Saturday</option>
-        <option>Sunday</option>
-      </select>
-
-      <label class="finder__label" for="select">specials in</label>
-      <select id="finder__neighborhood">
-        <option>any neighborhood</option>
-        <option>Albany Park</option>
-        <option>Andersonville</option>
-        <option>Avondale</option>
-        <option>Bridgeport</option>
-        <option>Bucktown</option>
-        <option>Edgewater</option>
-        <option>Edison Park</option>
-        <option>Gold Coast</option>
-        <option>Humboldt Park</option>
-        <option>Irving Park</option>
-        <option>Jefferson Park</option>
-        <option>Lakeview</option>
-        <option>Lincoln Park</option>
-        <option>Lincoln Square</option>
-        <option>Logan Square</option>
-        <option>Loop</option>
-        <option>Mayfair</option>
-        <option>Millenium Park</option>
-        <option>Near North Side</option>
-        <option>Near South Side</option>
-        <option>Near West Side</option>
-        <option>Noble Square</option>
-        <option>North Center</option>
-        <option>Norwood Park</option>
-        <option>Old Town</option>
-        <option>Pilsen</option>
-        <option>Printers Row</option>
-        <option>River North</option>
-        <option>Rogers Park</option>
-        <option>Roscoe Village</option>
-        <option>South Loop</option>
-        <option>Streeterville</option>
-        <option>Ukrainian Village</option>
-        <option>University Village</option>
-        <option>Uptown</option>
-        <option>West Loop</option>
-        <option>West Rogers Park</option>
-        <option>Wicker Park</option>
-        <option>Wrigleyville</option> 
-      </select>
-
-      <label class="finder__label" for="select">at</label>
-      <select id="finder__type">
-        <option>any type of bar</option>
-        <option>Dive bar</option>
-        <option>Night Club</option>
-        <option>Sports Bar</option>
-        <option>Microbrewery</option>
-      </select>      
-
-      <button class="buttons" type="submit">Go</button>
-
-    </p>
-
+    {% include finder.html %}
   </div>
 </div>
