--- a/_posts/2014-01-01-recently-updated-block.html
+++ b/_posts/2014-01-01-recently-updated-block.html
@@ -3,3 +3,9 @@ layout: post
 title: "Recently Updated block"
 categories: components
 ---
+
+<div class="container">
+  <div class="l-3up--2">
+    {% include updated-list.html %}
+  </div>
+</div>
