--- a/_posts/2014-01-01-site-footer.html
+++ b/_posts/2014-01-01-site-footer.html
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: "Site Footer"
+description: Some text about the site header and primary navigation.
 categories: components
 ---
 
+{% include site-footer.html %}
