Added markup display to component pages.

--- a/_posts/2014-01-01-finder.html
+++ b/_posts/2014-01-01-finder.html
@@ -5,8 +5,17 @@ description: The specials finder is the main user interface for finding specials
 categories: components
 ---
 
-<div class="container finder">
+{% include finder.html %}
+
+<div class="container">
   <div class="l-1up">
-    {% include finder.html %}
+    <h3>Markup</h3>
+{% highlight html %}
+{% include finder.html %}
+{% endhighlight %}
   </div>
 </div>
+
+
+
+
