--- a/_posts/2014-01-01-listing-rollup.html
+++ b/_posts/2014-01-01-listing-rollup.html
@@ -9,4 +9,12 @@ categories: components
   <div class="l-3up--2">
     {% include rollup--a.html %}
   </div>
+
+  <div class="l-1up">
+    <h3>Markup</h3>
+{% highlight html %}
+{% include rollup--a.html %}
+{% endhighlight %}
+  </div>
 </div>
+
