--- a/_posts/2014-01-01-find-a-bar.html
+++ b/_posts/2014-01-01-find-a-bar.html
@@ -7,11 +7,12 @@ categories: templates
 {% include site-header.html %}
 
 <div class="container">
-  <div class="l-1up l-finder">
-    {% include finder.html %}
+  <div class="l-1up l-stripe">
+    {% include finder_ui.html %}
+    <img class="finder__map" src="{{ site.baseurl }}/assets/img/map-fpo.png"/>
   </div>
 </div>
-<div class="finder-results">
+
   <div class="container">
     <div class="l-3up--1">
       {% include rollup--a.html %}
@@ -50,46 +51,4 @@ categories: templates
       {% include rollup--b.html %}
     </div>              
   </div>
-</div>
-{% include site-footer.html %}
-
-
-
-{% include site-header.html %}
-<div class="container">
-  <div class="l-1up l-finder">
-    {% include finder.html %}
-  </div>
-</div>
-<div class="finder-results">
-  <div class="container">
-    <div class="l-page">
-      {% include rollup--a.html %}
-      {% include rollup--b.html %}
-      {% include rollup--c.html %}
-      {% include rollup--a.html %}
-      {% include rollup--b.html %}
-      {% include rollup--c.html %}
-      {% include rollup--a.html %}
-      {% include rollup--b.html %}
-      {% include rollup--c.html %}
-      {% include rollup--a.html %}
-      {% include rollup--b.html %}
-      {% include rollup--c.html %}            
-    </div>              
-  </div>
-</div>
-
-<div class="container">
-  <div class="l-3up--1">
-    {% include added-list.html %}
-  </div>
-  <div class="l-3up--2">
-    {% include updated-list.html %}
-  </div>
-  <div class="l-3up--3">
-    {% include added-list.html %}
-  </div>
-</div>
-
 {% include site-footer.html %}
