--- a/_posts/2014-01-01-home-page.html
+++ b/_posts/2014-01-01-home-page.html
@@ -5,60 +5,19 @@ categories: templates
 ---
 
 {% include site-header.html %}
+
+{% include finder.html %}
+
 {% include feature.html %}
 
 <div class="container">
-  <div class="l-1up l-finder">
-    {% include finder.html %}
-  </div>
-</div>
-<div class="finder-results">
-  <div class="container">
-    <div class="l-3up--1">
-      {% include rollup--a.html %}
-    </div>
-    <div class="l-3up--2">
-      {% include rollup--b.html %}
-    </div>
-    <div class="l-3up--3">
-      {% include rollup--c.html %}
-    </div> 
-    <div class="l-3up--1">
-      {% include rollup--c.html %}
-    </div>
-    <div class="l-3up--2">
-      {% include rollup--b.html %}
-    </div>
-    <div class="l-3up--3">
-      {% include rollup--a.html %}
-    </div> 
-    <div class="l-3up--1">
-      {% include rollup--a.html %}
-    </div>
-    <div class="l-3up--2">
-      {% include rollup--b.html %}
-    </div>
-    <div class="l-3up--3">
-      {% include rollup--c.html %}
-    </div> 
-    <div class="l-3up--1">
-      {% include rollup--b.html %}
-    </div>
-    <div class="l-3up--2">
-      {% include rollup--a.html %}
-    </div>
-    <div class="l-3up--3">
-      {% include rollup--b.html %}
-    </div>              
-  </div>
-</div>
-
-<div class="container">
-  <div class="l-1up">
+  <div class="l-1up l-stripe">
     {% include neighborhoods-list.html %}
   </div>
 </div>
 
+
+<!--
 <div class="container">
   <div class="l-3up--1">
     {% include added-list.html %}
@@ -70,5 +29,6 @@ categories: templates
     {% include added-list.html %}
   </div>
 </div>
+-->
 
 {% include site-footer.html %}
