Added support for jekyll-contentblocks (https://github.com/rustygeldmacher/jekyll-contentblocks)

--- a/_posts/2014-01-01-finder.html
+++ b/_posts/2014-01-01-finder.html
@@ -2,19 +2,16 @@
 layout: post
 title: "Finder"
 description: The specials finder is the main user interface for finding specials by day of the week, neighborhood and bar type. The day of the week value is required and defaults to "today".
-categories: components
+categories: component
 ---
 
 {% include finder.html %}
 
-<div class="container">
-  <div class="l-1up">
-    <h3>Markup</h3>
+
 {% highlight html %}
 {% include finder.html %}
 {% endhighlight %}
-  </div>
-</div>
+
 
 
 
