--- a/_posts/2014-01-01-site-footer.html
+++ b/_posts/2014-01-01-site-footer.html
@@ -2,7 +2,7 @@
 layout: post
 title: "Site Footer"
 description: Some text about the site header and primary navigation.
-categories: components
+categories: component
 ---
 
 {% include site-footer.html %}
