--- a/_posts/2014-01-01-site-header.html
+++ b/_posts/2014-01-01-site-header.html
@@ -2,7 +2,7 @@
 layout: post
 title: "Site Header"
 description: Some text about the site header and primary navigation.
-categories: components
+categories: component
 ---
 
 {% include site-header.html %}
