--- a/_posts/2014-01-01-dotw-list.html
+++ b/_posts/2014-01-01-dotw-list.html
@@ -2,7 +2,7 @@
 layout: post
 title: "Day of the Week list"
 description: Used on bar pages to display the food and drink specials for each day of the week.
-categories: components
+categories: component
 ---
 
 {{% include dotw-list.html %}}
