--- a/_posts/2014-01-01-listing-rollup.html
+++ b/_posts/2014-01-01-listing-rollup.html
@@ -1,20 +1,15 @@
 ---
-layout: post
+layout: component
 title: "Listing Rollup"
 description: Listing rollups are a results microformat that display a bar's daily special. Their role is to quickly communicate the bar's location, specials and bar type in an easily scannable manner.  
-categories: components
+categories: component
 ---
 
 <div class="container">
-  <div class="l-3up--2">
-    {% include rollup--a.html %}
-  </div>
-
-  <div class="l-1up">
-    <h3>Markup</h3>
-{% highlight html %}
-{% include rollup--a.html %}
-{% endhighlight %}
+  <div class="l-page">
+    {% include rollup--a.html %}  
   </div>
 </div>
-
+{% contentfor markup %}
+{% include rollup--a.html %}
+{% endcontentfor %}
