Updated style guide.

--- a/_posts/2014-01-01-finder.html
+++ b/_posts/2014-01-01-finder.html
@@ -4,14 +4,21 @@ title: "Finder"
 description: The specials finder is the main user interface for finding specials by day of the week, neighborhood and bar type. The day of the week value is required and defaults to "today".
 categories: Components
 ---
-
+<section class="styleguide-example">
+  <div class="container">
+    <div class="l-1up">
 {% include finder.html %}
+    </div>
+  </div>
+</section>
 
-
+<section class="styleguide-markup container">
+  <div class="l-1up">
 {% highlight html %}
 {% include finder.html %}
 {% endhighlight %}
-
+  </div>
+</section>
 
 
 
