--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Home
       <h2>Components</h2>
       <p>Elements are combined and sometimes modified to create components. Components are designed to serve specific functional roles within the system.</p>
       <ul class="posts">
-        {% for post in site.categories.components order:descending %}
+        {% for post in site.categories.components %}
           <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
       </ul>
