Updated typography element page.

--- a/_posts/2014-01-01-typography.html
+++ b/_posts/2014-01-01-typography.html
@@ -8,12 +8,12 @@ categories: elements
   <section class="l-1up styleguide-body">
     <b>Headings</b>
     <hr />
-    <h1>Heading One: It is a Period of Civil War</h1>
-    <h2>Heading Two: It is a Period of Civil War</h2> 
-    <h3>Heading Three: It is a Period of Civil War</h3>
-    <h4>Heading Four: It is a Period of Civil War</h4> 
-    <h5>Heading Five: It is a Period of Civil War</h5> 
-    <h6>Heading Six: It is a Period of Civil War</h6>       
+    <h1>H1: It is a Period of Civil War</h1>
+    <h2>H2: It is a Period of Civil War</h2> 
+    <h3>H3: It is a Period of Civil War</h3>
+    <h4>H4: It is a Period of Civil War</h4> 
+    <h5>H5: It is a Period of Civil War</h5> 
+    <h6>H6: It is a Period of Civil War</h6>       
   </section>       
   <section class="l-1up styleguide-body">
     <b>Paragraphs & Lists</b>
