--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Home
     <section>
       <hr />
       <h2>Templates</h2>
-      <p>Templates are the specific page structures. They are as you might imagine, populated with... Components.<p>
+      <p>Based on the needs of the content, Components are arranged into specific layouts to create Templates.<p>
       <ul class="posts">
         {% for post in site.categories.templates %}
           <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
