Updated site-header.html + .scss. Kind of have a header design now.

--- a/_posts/2014-01-01-bar-page.html
+++ b/_posts/2014-01-01-bar-page.html
@@ -1,6 +1,7 @@
 ---
 layout: templates
 title: "Bar Page"
+description: Displays location, special and contact information content for a single bar.
 categories: Templates
 ---
 {% include site-header.html %}
