--- a/_posts/2014-01-01-color-palette.html
+++ b/_posts/2014-01-01-color-palette.html
@@ -58,7 +58,7 @@ categories: Elements
       </code>
     </div>  
 
-    <div class="styleguide-swatch" style="background: #f3f3f2">
+    <div class="styleguide-swatch white-box" style="background: #f3f3f2">
       <code>
         Variable: $stout-05 <br />
         Hex: #f3f3f2
