--- a/_posts/2014-01-01-find-a-bar.html
+++ b/_posts/2014-01-01-find-a-bar.html
@@ -1,6 +1,7 @@
 ---
 layout: templates
 title: "Find a Bar Page"
+description: Something about this template is it cool because this and because of that. Only put this type of content on this template you dumb denny.
 categories: Templates
 ---
 
