--- a/_posts/2014-01-01-general-page.html
+++ b/_posts/2014-01-01-general-page.html
@@ -1,5 +1,6 @@
 ---
 layout: post
 title: "General Page"
+description: Something about this template is it cool because this and because of that. Only put this type of content on this template you dumb denny.
 categories: Templates
 ---
