--- a/_posts/2014-01-01-site-header.html
+++ b/_posts/2014-01-01-site-header.html
@@ -4,5 +4,14 @@ title: "Site Header"
 description: Some text about the site header and primary navigation.
 categories: Components
 ---
+<section class="styleguide-example">
+  {% include site-header.html %}
+</section>
 
+<section class="styleguide-markup container">
+  <div class="l-1up">
+{% highlight html %}
 {% include site-header.html %}
+{% endhighlight %}
+  </div>
+</section>
