--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
       <h2>Elements</h2>
       <p>Elements are the foundation of the system. Simply using typography and color, well designed Elements can begin to express the site's personality.</p>
       <ul class="posts">
-        {% for post in site.categories.elements %}
+        {% for post in site.categories.elements reversed %}
           <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
       </ul>
@@ -22,7 +22,7 @@ title: Home
       <h2>Components</h2>
       <p>Elements are combined and modified to create components. Components are designed to serve specific functional roles within the system.</p>
       <ul class="posts">
-        {% for post in site.categories.components %}
+        {% for post in site.categories.components reversed %}
           <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
       </ul>
@@ -33,8 +33,8 @@ title: Home
       <h2>Templates</h2>
       <p>Based on the needs of the content, Components are arranged into specific layouts to create Templates.<p>
       <ul class="posts">
-        {% for post in site.categories.templates %}
-          <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+        {% for post in site.categories.templates reversed %}
+          <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> › {{ post.description }}</li>
         {% endfor %}
       </ul>
     </section>
