Updated Home page and link colors.

--- a/_posts/2014-01-01-component__feature.html
+++ b/_posts/2014-01-01-component__feature.html
@@ -7,7 +7,7 @@ categories: Components
 
 <section class="styleguide-example">
   <div class="container">
-    <div class="l-page">
+    <div class="l-1up">
       {% include feature.html %}
     </div>
   </div>
