--- a/_posts/2014-01-01-element__color-palette.html
+++ b/_posts/2014-01-01-element__color-palette.html
@@ -3,31 +3,31 @@ layout: post
 title: "Color Palette"
 description: The colors of Small Tabs are inspired by wooden bar stools, delightfully bright chicken wings and of course beer.
 categories: Elements
-color-1: "#000000"
-color-2: "#222222"
-color-3: "#444444"
-color-4: "#666666"
-color-5: "#888888"
-color-6: "#cccccc"
+color-1: "#ffac00"
+color-2: "#E96300"
+color-3: "#281E0E"
+color-4: "#534b3e"
+color-5: "#e9e8e6"
+color-6: "#f4f3f2"
 ---
 
 <section class="container">
   <div class="l-2up--1">
     <div class="styleguide-swatch reverse" style="background:{{ page.color-1 }}">
       <code>
-        Variable: $variable <br />
+        Variable: $pilsner <br />
         Hex: {{ page.color-1 }}
       </code>
     </div>
     <div class="styleguide-swatch reverse" style="background:{{ page.color-2 }}">
       <code>
-        Variable: $variable <br />
+        Variable: $wingsauce <br />
         Hex: {{ page.color-2 }}
       </code>
     </div>
     <div class="styleguide-swatch reverse" style="background:{{ page.color-3 }}">
       <code>
-        Variable: $variable <br />
+        Variable: $stout <br />
         Hex: {{ page.color-3 }}
       </code>
     </div>
@@ -35,19 +35,19 @@ color-6: "#cccccc"
   <div class="l-2up--2">
     <div class="styleguide-swatch reverse" style="background:{{ page.color-4 }}">
       <code>
-        Variable: $variable <br />
+        Variable: $stout-80 <br />
         Hex: {{ page.color-4 }}
       </code>
     </div> 
-    <div class="styleguide-swatch reverse" style="background:{{ page.color-5 }}">
+    <div class="styleguide-swatch" style="background:{{ page.color-5 }}">
       <code>
-        Variable: $variable <br />
+        Variable: $stout-10 <br />
         Hex: {{ page.color-5 }}
       </code>
     </div> 
     <div class="styleguide-swatch" style="background:{{ page.color-6 }}">
       <code>
-        Variable: $variable <br />
+        Variable: $stout-05 <br />
         Hex: {{ page.color-6 }}
       </code>
     </div> 
