--- a/_posts/2014-01-01-template__general.html
+++ b/_posts/2014-01-01-template__general.html
@@ -3,4 +3,5 @@ layout: post
 title: "General Page"
 description: Something about this template is it cool because this and because of that. Only put this type of content on this template you dumb denny.
 categories: Templates
+published: false
 ---
