--- a/_posts/2014-01-01-template__bar.html
+++ b/_posts/2014-01-01-template__bar.html
@@ -6,19 +6,14 @@ categories: Templates
 ---
 {% include site-header.html %}
 
-<div class="container">
-  <div class="l-1up">
-    <h1>Quenchers Saloon</h1>
-    <p>2401 N Western Ave, 
-      <a href="#">Logan Square</a>
-    </p>
+<header class="container">
+  <div class="l-1up l-stripe">
+    <h1 class="bar__title">Quenchers Saloon</h1>
+    <p class="bar__address">2401 N Western Ave, <a href="#">Logan Square</a></p>
   </div>
-</div>
+</header>
 
 <div class="page">
-  <figure class="finder__map">
-    <img src="{{ site.baseurl }}/assets/img/map-fpo.png" />
-  </figure>
 
   <div class="container">
     <div class="l-66-33--1">
@@ -26,8 +21,11 @@ categories: Templates
     </div>  
 
     <div class="l-66-33--2">
+      <figure class="finder__map">
+        <img src="{{ site.baseurl }}/assets/img/map-fpo.png"/>
+      </figure>  
       {% include contact-list.html %}
-      {% include added-list.html %}
+      {% include added-list.html %}  
     </div>      
   </div>
 </div>
