--- a/_posts/2014-01-01-template__find-a-bar.html
+++ b/_posts/2014-01-01-template__find-a-bar.html
@@ -1,29 +1,37 @@
 ---
 layout: templates
 title: "Find a Bar Page"
-description: Something about this template is it cool because this and because of that. Only put this type of content on this template you dumb denny.
+description: Displays specials results per search query in the order of most recently updately.
 categories: Templates
 ---
 
 {% include site-header.html %}
 
-{% include finder.html %}
+<div class="container">
+  <div class="l-1up l-stripe">
+    {% include finder.html %}
+  </div> 
+</div>
 
 <div class="page">
   <div class="container">
-    <div class="l-66-33--1">
+    <div class="l-33-66--1">
+      <figure class="finder__map">
+        <img src="{{ site.baseurl }}/assets/img/map-fpo.png"/>
+      </figure>
+    </div>
+    <div class="l-33-66--2">
       {% include rollup--a.html %}
       {% include rollup--b.html %}
       {% include rollup--c.html %}
+      {% include rollup--b.html %}
+      {% include rollup--a.html %}
+      {% include rollup--b.html %}
       {% include rollup--c.html %}
       {% include rollup--b.html %}
       {% include rollup--a.html %}
-      {% include rollup--a.html %}
       {% include rollup--b.html %}
-      {% include rollup--c.html %}
-      {% include rollup--b.html %}
-      {% include rollup--a.html %}
-      {% include rollup--b.html %}
+      {% include rollup--c.html %}      
     </div>              
   </div>
 </div>
