Updated descriptions of all components.

--- a/_posts/2014-01-01-component__contact-list.html
+++ b/_posts/2014-01-01-component__contact-list.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Contact list"
-description: Something about this component.
+description: This block appears on single bar pages and displays contact and social media information.
 categories: Components
 ---
 <section class="styleguide-example">
