--- a/_posts/2014-01-01-component__feature.html
+++ b/_posts/2014-01-01-component__feature.html
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Featured Bar"
-description: Something about this component.
+title: "Featured Special"
+description: The home page prominently features a single special for each day of the week. This spot may be used to promote a single bar for the entire week. 
 categories: Components
 ---
 
