--- a/_posts/2014-01-01-component__footer.html
+++ b/_posts/2014-01-01-component__footer.html
@@ -1,8 +1,17 @@
 ---
 layout: post
 title: "Site Footer"
-description: Some text about the site header and primary navigation.
+description: The site footer displays the shorthand version of the Small Tabs logo, as well as links to Small Tabs' Facebook and Twitter accounts.
 categories: Components
 ---
+<section class="styleguide-example">
+  {% include site-footer.html %}
+</section>
 
+<section class="styleguide-markup container">
+  <div class="l-1up">
+{% highlight html %}
 {% include site-footer.html %}
+{% endhighlight %}
+  </div>
+</section>
