--- a/_posts/2014-01-01-component__header.html
+++ b/_posts/2014-01-01-component__header.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Site Header"
-description: Some text about the site header and primary navigation.
+description: The site header is consistent across all pages. It is responsible for displaying the Small Tabs brand, and a minimal amount of primary navigation. At smaller viewports, the navigation is collapsed into a "menu" icon.
 categories: Components
 ---
 <section class="styleguide-example">
