--- a/_posts/2014-01-01-component__nearby-list.html
+++ b/_posts/2014-01-01-component__nearby-list.html
@@ -1,5 +1,21 @@
 ---
 layout: post
 title: "Nearby Bars list"
+description: This list block appears on single bar pages and displays nearby establishments according to the bar's neighborhood category and location.
 categories: Components
 ---
+<section class="styleguide-example">
+  <div class="container">
+    <div class="l-3up--2">
+      {% include nearby-list.html %}
+    </div>
+  </div>
+</section>
+
+<section class="styleguide-markup container">
+  <div class="l-1up">
+{% highlight html %}
+{% include nearby-list.html %}
+{% endhighlight %}
+  </div>
+</section>
