--- a/_posts/2014-01-01-template__home.html
+++ b/_posts/2014-01-01-template__home.html
@@ -1,7 +1,7 @@
 ---
 layout: templates
 title: "Home Page"
-description: Something about this template is it cool because this and because of that. Only put this type of content on this template you dumb denny.
+description: Prominently displays the Finder interface, a featured special, and a complete list of cataloged neighborhoods, should a user want to simply browse by neighborhood instead of doing a detailed search.
 categories: Templates
 ---
 
