--- a/_posts/2014-01-02-template__find-a-bar.html
+++ b/_posts/2014-01-02-template__find-a-bar.html
@@ -1,7 +1,7 @@
 ---
 layout: templates
 title: "Find a Bar Page"
-description: Displays specials results per search query in the order of most recently updately.
+description: Displays specials results per search query the order of most recently updated.
 categories: Templates
 ---
 
