--- a/_posts/2014-01-01-component__added-block.html
+++ b/_posts/2014-01-01-component__added-block.html
@@ -1,11 +1,23 @@
 ---
 layout: post
 title: "Recently Added block"
+description: This list block appears on any page of the site, and displays the four most recently added bar pages in reverse chronological order.
 categories: Components
 ---
 
-<div class="container">
-  <div class="l-3up--2">
-    {% include added-list.html %}
+
+<section class="styleguide-example">
+  <div class="container">
+    <div class="l-3up--2">
+      {% include added-list.html %}
+    </div>
   </div>
-</div>
+</section>
+
+<section class="styleguide-markup container">
+  <div class="l-1up">
+{% highlight html %}
+{% include added-list.html %}
+{% endhighlight %}
+  </div>
+</section>
