--- a/_posts/2014-01-01-component__updated-block.html
+++ b/_posts/2014-01-01-component__updated-block.html
@@ -1,11 +1,22 @@
 ---
 layout: post
 title: "Recently Updated block"
+description: This list block appears on any page of the site, and displays the four most recently updated bar pages in reverse chronological order.
 categories: Components
 ---
 
-<div class="container">
-  <div class="l-3up--2">
-    {% include updated-list.html %}
+<section class="styleguide-example">
+  <div class="container">
+    <div class="l-3up--2">
+      {% include updated-list.html %}
+    </div>
   </div>
-</div>
+</section>
+
+<section class="styleguide-markup container">
+  <div class="l-1up">
+{% highlight html %}
+{% include updated-list.html %}
+{% endhighlight %}
+  </div>
+</section>
