Swapped out web fonts.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <div class="container">
   <div class="l-1up styleguide-body">
-    <h1>Styleguide</h1>
+    <h1>Style Guide</h1>
 
     <section>
       <hr />
